# flayer_generator

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  streamlit_app.py
backend/: Dockerfile  main.py  requirements.txt  streamlit_app.py
backend/api/: dalle.py  image_generator.py
backend/db/: database.py  models.py  vector_database.py
backend/models/: prompt.py
backend/services/: RAG.py  caption_generator.py  embedding.py  image_tratative.py
backend/utils/: RAG.py  embedding.py  image_tratative.py
