[project]
name = "flayer-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "fastapi-cli>=0.0.7",
    "huggingface-hub>=0.33.2",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.68",
    "langchain-openai>=0.3.28",
    "pillow>=11.3.0",
    "pre-commit>=4.2.0",
    "qdrant-client>=1.14.3",
    "requests>=2.32.4",
    "streamlit>=1.46.1",
    "torch>=2.7.1",
    "transformers>=4.53.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.3",
]
